changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
@@ -63,12 +63,12 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th style="text-align: left;">Khata Name</th>
-                  <th style="text-align: left;">Date</th>
-                  <th style="text-align: left;">Vehicle</th>
-                  <th style="text-align: left;">Product</th>
-                  <th style="text-align: left;">Amount</th>
-                  <th style="text-align: left;">Quantity</th>
+                  <th style="text-align: left;"><b>Khata Name</b></th>
+                  <th style="text-align: left;"><b>Date</b></th>
+                  <th style="text-align: left;"><b>Vehicle</b></th>
+                  <th style="text-align: left;"><b>Product</b></th>
+                  <th style="text-align: left;"><b>Amount</b></th>
+                  <th style="text-align: left;"><b>Quantity</b></th>
                 </tr>
               </thead>
               <tbody>
@@ -103,9 +103,9 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th style="text-align: center;">Product</th>
-                  <th style="text-align: center;">Total Amount</th>
-                  <th style="text-align: center;">Total Quantity</th>
+                  <th style="text-align: center;"><b>Product</b></th>
+                  <th style="text-align: center;"><b>Total Amount</b></th>
+                  <th style="text-align: center;"><b>Total Quantity</b></th>
                 </tr>
               </thead>
               <tbody>
@@ -186,10 +186,10 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'">Khata Name</th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'">Product</th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'">Amount</th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'">Quantity</th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Khata Name</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Product</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Amount</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'0px'"><b>Quantity</b></th>
                     </tr>
                   </thead>
                   &nbsp;
@@ -236,9 +236,9 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: center;">Product</th>
-                      <th style="text-align: center;">Total Amount</th>
-                      <th style="text-align: center;">Total Quantity</th>
+                      <th style="text-align: center;"><b>Product</b></th>
+                      <th style="text-align: center;"><b>Total Amount</b></th>
+                      <th style="text-align: center;"><b>Total Quantity</b></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -319,12 +319,12 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'50px'">Sr No</th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'100px'">Khata Name
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'50px'"><b>Sr No</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'100px'"><b>Khata Name</b>
                       </th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'">Product</th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'">Amount</th>
-                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'">Quantity</th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Product</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Amount</b></th>
+                      <th style="text-align: center; padding:5px" class="p-0" [style.min-width]="'90px'"><b>Quantity</b></th>
                     </tr>
                   </thead>
                   &nbsp;
@@ -374,9 +374,9 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: center; ">Product</th>
-                      <th style="text-align: center; ">Total Amount</th>
-                      <th style="text-align: center; ">Total Quantity</th>
+                      <th style="text-align: center; "><b>Product</b></th>
+                      <th style="text-align: center; "><b>Total Amount</b></th>
+                      <th style="text-align: center; "><b>Total Quantity</b></th>
                     </tr>
                   </thead>
                   <tbody>
