--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget8/charts-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget8/charts-widget8.component.html
@@ -66,10 +66,10 @@
       <table id="excel-table" class="table table-centered table-nowrap">
         <thead class="table-light">
           <tr>
-            <th style="text-align: left;">Khata Name</th>
-            <th style="text-align: left;">Product</th>
-            <th style="text-align: left;">Amount</th>
-            <th style="text-align: left;">Quantity</th>
+            <th style="text-align: left;"><b>Khata Name</b></th>
+            <th style="text-align: left;"><b>Product</b></th>
+            <th style="text-align: left;"><b>Amount</b></th>
+            <th style="text-align: left;"><b>Quantity</b></th>
           </tr>
         </thead>
         <tbody
