--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget10/trans-tables-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget10/trans-tables-widget10.component.html
@@ -30,7 +30,7 @@
                                                 <ng-template [ngTemplateOutlet]="businessdetails"></ng-template>
                                             </ng-template>
                                         </li>
-                                        <li [ngbNavItem]="3">
+                                        <!-- <li [ngbNavItem]="3">
                                             <a ngbNavLink>
                                                 <span class="d-block d-sm-none"><i class="far fa-envelope"></i></span>
                                                 <span class="d-none d-sm-block" style="font-size: 13.5px;">KYC
@@ -39,7 +39,7 @@
                                             <ng-template ngbNavContent>
                                                 <ng-template [ngTemplateOutlet]="KYCupload"></ng-template>
                                             </ng-template>
-                                        </li>
+                                        </li> -->
 
                                     </ul>
                                     <div [ngbNavOutlet]="customNav"></div>
@@ -169,7 +169,7 @@
                             </div>
                             <div class="col-md-1"></div>
                             <div class="col-md-5">
-                                <div class="row">
+                                <!-- <div class="row">
                                     <form [formGroup]="dealerForm">
                                         <div class="col col-md-5 col-lg-5">
                                             <label for="logo">Logo :</label>
@@ -183,7 +183,7 @@
                                     </form>
                                 </div>
                                 <hr>
-                                <br>
+                                <br> -->
                                 <div class="row">
 
                                     <div class="col col-md-6 col-lg-6">
