--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget3/charts-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget3/charts-widget3.component.html
@@ -75,9 +75,9 @@
                       style="border-collapse: collapse; border: 1px solid black;">
                       <thead class="table-light">
                         <tr>
-                          <th style="text-align: center;border-width: 1px; border-color: #000;"> Product</th>
-                          <th style="text-align: center;border-width: 1px; border-color: #000;"> Quantity</th>
-                          <th style="text-align: center;border-width: 1px; border-color: #000;"> Amount </th>
+                          <th style="text-align: center;border-width: 1px; border-color: #000;"><b> Product</b></th>
+                          <th style="text-align: center;border-width: 1px; border-color: #000;"><b> Quantity</b></th>
+                          <th style="text-align: center;border-width: 1px; border-color: #000;"><b> Amount</b> </th>
 
                       </thead>
                       <tbody>
@@ -110,12 +110,12 @@
                     <tr>
                       <th></th>
 
-                      <th style="text-align: center;"> Received Date</th>
-                      <th style="text-align: center;"> Invoice Number </th>
-                      <th style="text-align: center;"> Vehicle Number </th>
-                      <th style="text-align: center;"> Product</th>
-                      <th style="text-align: center;"> Quantity</th>
-                      <th style="text-align: center;"> Total Amount </th>
+                      <th style="text-align: center;"><b> Received Date</b></th>
+                      <th style="text-align: center;"><b> Invoice Number </b></th>
+                      <th style="text-align: center;"><b> Vehicle Number </b></th>
+                      <th style="text-align: center;"><b> Product</b></th>
+                      <th style="text-align: center;"><b> Quantity</b></th>
+                      <th style="text-align: center;"><b> Total Amount </b></th>
 
                     </tr>
                   </thead>
@@ -185,14 +185,14 @@
                           <thead class="table-light">
                             <tr>
                               <th></th>
-                              <th style="text-align: center;"> Invoice Date</th>
-                              <th style="text-align: center;"> Basic Amount</th>
-                              <th style="text-align: center;"> Vat Amount</th>
-                              <th style="text-align: center;"> Vat %</th>
-                              <th style="text-align: center;"> Cess Amount</th>
-                              <th style="text-align: center;"> Total Tax</th>
-                              <th style="text-align: center;"> Other Components </th>
-                              <th style="text-align: center;"> Action </th>
+                              <th style="text-align: center;"><b> Invoice Date</b></th>
+                              <th style="text-align: center;"><b> Basic Amount</b></th>
+                              <th style="text-align: center;"><b> Vat Amount</b></th>
+                              <th style="text-align: center;"><b> Vat %</b></th>
+                              <th style="text-align: center;"><b> Cess Amount</b></th>
+                              <th style="text-align: center;"><b> Total Tax</b></th>
+                              <th style="text-align: center;"><b> Other Components </b></th>
+                              <th style="text-align: center;"><b> Action </b></th>
                             </tr>
                           </thead>
                           <tbody>
