--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget4/charts-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget4/charts-widget4.component.html
@@ -51,11 +51,11 @@
               <table class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: center"> Sr.No </th>
-                    <th style="text-align: center"> Product </th>
-                    <th style="text-align: center"> Quantity </th>
-                    <th style="text-align: center"> Amount </th>
-                    <th style="text-align: center"> Variation Percentage </th>
+                    <th style="text-align: center"><b> Sr.No </b></th>
+                    <th style="text-align: center"><b> Product </b></th>
+                    <th style="text-align: center"><b> Quantity </b></th>
+                    <th style="text-align: center"><b> Amount </b></th>
+                    <th style="text-align: center"><b> Variation Percentage </b></th>
                     <th> </th>
                   </tr>
                 </thead>
