--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget5/charts-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget5/charts-widget5.component.html
@@ -70,12 +70,12 @@
       <table class="table table-centered table-nowrap">
         <thead class="table-light">
           <tr>
-            <th style="text-align: left;">Khata Name</th>
-            <th style="text-align: left;">Date</th>
-            <th style="text-align: left;">Vehicle</th>
-            <th style="text-align: left;">Product</th>
-            <th style="text-align: left;">Amount</th>
-            <th style="text-align: left;">Quantity</th>
+            <th style="text-align: left;"><b>Khata Name</b></th>
+            <th style="text-align: left;"><b>Date</b></th>
+            <th style="text-align: left;"><b>Vehicle</b></th>
+            <th style="text-align: left;"><b>Product</b></th>
+            <th style="text-align: left;"><b>Amount</b></th>
+            <th style="text-align: left;"><b>Quantity</b></th>
           </tr>
         </thead>
         <tbody
