changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget14/advance-tables-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget14/advance-tables-widget14.component.html
@@ -8,10 +8,10 @@
                 <table class="table table-hover table-striped">
                     <thead>
                         <tr>
-                            <th style="text-align: center;"> Lubricant Name </th>
-                            <th style="text-align: center;"> Unit </th>
-                            <th style="text-align: center;"> HSN/SAC </th>
-                            <th style="text-align: center;"> Action </th>
+                            <th style="text-align: center;"><b> Lubricant Name </b></th>
+                            <th style="text-align: center;"><b> Unit </b></th>
+                            <th style="text-align: center;"><b> HSN/SAC </b></th>
+                            <th style="text-align: center;"><b> Action </b></th>
                         </tr>
                     </thead>
                     <tbody *ngFor="let lube of addArrayLube; let i = index;">
