--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget10/charts-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget10/charts-widget10.component.html
@@ -29,13 +29,13 @@
       <table class="table table-centered table-nowrap">
         <thead>
           <tr>
-            <th align=left>Sr. No.</th>
-            <th align=left>Tank</th>
-            <th align=left>Product</th>
-            <th align=left>Volume</th>
-            <th align=left>Pump</th>
-            <th align=left>Nozzle</th>
-            <th align=left>Action</th>
+            <th align=left><b>Sr. No.</b></th>
+            <th align=left><b>Tank</b></th>
+            <th align=left><b>Product</b></th>
+            <th align=left><b>Volume</b></th>
+            <th align=left><b>Pump</b></th>
+            <th align=left><b>Nozzle</b></th>
+            <th align=left><b>Action</b></th>
           </tr>
         </thead>
         <tbody *ngFor="let nozzle of SetNozzelData; let i = index;">
@@ -158,12 +158,12 @@
       <table class="table table-centered table-nowrap">
         <thead>
           <tr>
-            <th style="text-align: left;">Sr. No.</th>
-            <th style="text-align: left;">Tank</th>
-            <th style="text-align: left;">Pump</th>
-            <th style="text-align: left;">Nozzle</th>
-            <th style="text-align: left;">Volume</th>
-            <th style="text-align: left;">Product</th>
+            <th style="text-align: left;"><b>Sr. No.</b></th>
+            <th style="text-align: left;"><b>Tank</b></th>
+            <th style="text-align: left;"><b>Pump</b></th>
+            <th style="text-align: left;"><b>Nozzle</b></th>
+            <th style="text-align: left;"><b>Volume</b></th>
+            <th style="text-align: left;"><b>Product</b></th>
           </tr>
         </thead>
         <tbody *ngFor="let data of pumpInfraDetails.data  ; let i = index">
