--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget11/charts-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget11/charts-widget11.component.html
@@ -100,14 +100,14 @@
       <table class="table table-centered table-nowrap">
         <thead>
           <tr>
-            <th style="text-align: left;">Sr No</th>
-            <th style="text-align: left;">Tank</th>
-            <th style="text-align: left;">Pump</th>
-            <th style="text-align: left;">Nozzle</th>
-            <th style="text-align: left;">Volume</th>
-            <th style="text-align: left;">Product</th>
-            <th style="text-align: left;">Action</th>
-            <th style="text-align: left;">Stamping</th>
+            <th style="text-align: left;"><b>Sr No</b></th>
+            <th style="text-align: left;"><b>Tank</b></th>
+            <th style="text-align: left;"><b>Pump</b></th>
+            <th style="text-align: left;"><b>Nozzle</b></th>
+            <th style="text-align: left;"><b>Volume</b></th>
+            <th style="text-align: left;"><b>Product</b></th>
+            <th style="text-align: left;"><b>Action</b></th>
+            <th style="text-align: left;"><b>Stamping</b></th>
           </tr>
         </thead>
         <tbody *ngFor="let data of pumpInfraDetails.data  ; let i = index">
