--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget12/charts-widget12.component.html
@@ -110,12 +110,12 @@
               <table class="table table-centered table-nowrap">
                 <thead class="table-light">
                   <tr>
-                    <th style="text-align: left;"> Sr. No. </th>
-                    <th style="text-align: left;"> Date Time </th>
-                    <th style="text-align: left;"> Rate (Rs/Ltr) </th>
-                    <th style="text-align: left;"> Product </th>
-                    <th style="text-align: left;"> Selling Price </th>
-                    <th style="text-align: left;"> Action </th>
+                    <th style="text-align: left;"><b> Sr. No. </b></th>
+                    <th style="text-align: left;"><b> Date Time </b></th>
+                    <th style="text-align: left;"><b> Rate (Rs/Ltr) </b></th>
+                    <th style="text-align: left;"><b> Product </b></th>
+                    <th style="text-align: left;"><b> Selling Price </b></th>
+                    <th style="text-align: left;"><b> Action </b></th>
                   </tr>
                 </thead>
 
