--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget13/charts-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget13/charts-widget13.component.html
@@ -53,16 +53,16 @@
   <table class="table table-hover b">
     <thead>
       <tr>
-        <th style="text-align: left;">Date</th>
-        <th style="text-align: left;">Bill Number</th>
-        <th style="text-align: left;">Customer Details</th>
-        <th style="text-align: left;">Vehicle Number</th>
-        <th style="text-align: left;">Product</th>
-        <th style="text-align: left;">Rate</th>
-        <th style="text-align: left;">Quantity</th>
-        <th style="text-align: left;">Total Amount</th>
-        <th *ngIf="accessGroup == '12' " style="text-align: left;">Created By</th>
-        <th style="text-align: left;">Action</th>
+        <th style="text-align: left;"><b>Date</b></th>
+        <th style="text-align: left;"><b>Bill Number</b></th>
+        <th style="text-align: left;"><b>Customer Details</b></th>
+        <th style="text-align: left;"><b>Vehicle Number</b></th>
+        <th style="text-align: left;"><b>Product</b></th>
+        <th style="text-align: left;"><b>Rate</b></th>
+        <th style="text-align: left;"><b>Quantity</b></th>
+        <th style="text-align: left;"><b>Total Amount</b></th>
+        <th *ngIf="accessGroup == '12' " style="text-align: left;"><b>Created By</b></th>
+        <th style="text-align: left;"><b>Action</b></th>
       </tr>
     </thead>
     <tbody
