--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget14/charts-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget14/charts-widget14.component.html
@@ -50,20 +50,18 @@
     <thead>
       <tr>
         <th></th>
-        <th style="text-align: center;">Date</th>
-        <th style="text-align: center;">Bill Number</th>
-        <th style="text-align: center;">Khata Name</th>
-        <th style="text-align: center;">Vehicle Number</th>
-
-        <th style="text-align: center;">Product</th>
-        <th style="text-align: center;">Quantity</th>
-
-        <th style="text-align: center;">Basic Amount</th>
-        <th style="text-align: center;">CGST</th>
-        <th style="text-align: center;">SGST</th>
-        <th style="text-align: center;">IGST</th>
-        <th style="text-align: center;">Total Amount</th>
-        <th style="text-align: center;">Action</th>
+        <th style="text-align: center;"><b>Date</b></th>
+        <th style="text-align: center;"><b>Bill Number</b></th>
+        <th style="text-align: center;"><b>Khata Name</b></th>
+        <th style="text-align: center;"><b>Vehicle Number</b></th>
+        <th style="text-align: center;"><b>Product</b></th>
+        <th style="text-align: center;"><b>Quantity</b></th>
+        <th style="text-align: center;"><b>Basic Amount</b></th>
+        <th style="text-align: center;"><b>CGST</b></th>
+        <th style="text-align: center;"><b>SGST</b></th>
+        <th style="text-align: center;"><b>IGST</b></th>
+        <th style="text-align: center;"><b>Total Amount</b></th>
+        <th style="text-align: center;"><b>Action</b></th>
 
       </tr>
     </thead>
