--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget8/feeds-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget8/feeds-widget8.component.html
@@ -54,15 +54,15 @@
           <table class="table table-centered table-nowrap">
             <thead class="table-light">
               <tr>
-                <th> Month </th>
-                <th> Fuel Purchase </th>
-                <th> Lube Purchase </th>
-                <th> Fuel Sales </th>
-                <th> Lube Sales </th>
-                <th> Expense Amount </th>
-                <th> Profit & Loss % </th>
-                <th> View Report </th>
-                <th> Action </th>
+                <th><b> Month </b></th>
+                <th><b> Fuel Purchase </b></th>
+                <th><b> Lube Purchase </b></th>
+                <th><b> Fuel Sales </b></th>
+                <th><b> Lube Sales </b></th>
+                <th><b> Expense Amount </b></th>
+                <th><b> Profit & Loss % </b></th>
+                <th><b> View Report </b></th>
+                <th><b> Action </b></th>
               </tr>
             </thead>
             <tbody
