--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
@@ -21,11 +21,11 @@
     <table class="table table-centered table-nowrap">
       <thead class="table-light">
         <tr>
-          <th style="text-align: left;">Shift </th>
-          <th style="text-align: left;">Staff Name</th>
-          <th style="text-align: left;">Status</th>
-          <th style="text-align: left;">View Details</th>
-          <th style="text-align: left;">Actions</th>
+          <th style="text-align: left;"><b>Shift </b></th>
+          <th style="text-align: left;"><b>Staff Name</b></th>
+          <th style="text-align: left;"><b>Status</b></th>
+          <th style="text-align: left;"><b>View Details</b></th>
+          <th style="text-align: left;"><b>Actions</b></th>
         </tr>
       </thead>
       <tbody
