--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget2/pump-tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget2/pump-tables-widget2.component.html
@@ -23,9 +23,9 @@
                 <table class="table table-centered table-nowrap">
                   <thead class="table-light">
                     <tr>
-                      <th style="text-align: left;">Product</th>
-                      <th style="text-align: left;">Quantity</th>
-                      <th style="text-align: left;">Quantity In Pieces</th>
+                      <th style="text-align: left;"><b>Product</b></th>
+                      <th style="text-align: left;"><b>Quantity</b></th>
+                      <th style="text-align: left;"><b>Quantity In Pieces</b></th>
                     </tr>
                   </thead>
                   <tbody *ngFor="let data of lubeStockDetails; let i = index">
@@ -88,15 +88,15 @@
               <thead class="table-light">
                 <tr>
                   <th></th>
-                  <th style="text-align: left;">Invoice Date</th>
-                  <th style="text-align: left;">Company Name</th>
-                  <th style="text-align: left;">Product</th>
-                  <th style="text-align: left;">Quantity</th>
-                  <th style="text-align: left;">Quantity In Pieces</th>
-                  <th style="text-align: left;">Taxable Amount</th>
-                  <th style="text-align: left;">Tax %</th>
-                  <th style="text-align: left;">Total Amount</th>
-                  <th style="text-align: left;">Action</th>
+                  <th style="text-align: left;"><b>Invoice Date</b></th>
+                  <th style="text-align: left;"><b>Company Name</b></th>
+                  <th style="text-align: left;"><b>Product</b></th>
+                  <th style="text-align: left;"><b>Quantity</b></th>
+                  <th style="text-align: left;"><b>Quantity In Pieces</b></th>
+                  <th style="text-align: left;"><b>Taxable Amount</b></th>
+                  <th style="text-align: left;"><b>Tax %</b></th>
+                  <th style="text-align: left;"><b>Total Amount</b></th>
+                  <th style="text-align: left;"><b>Action</b></th>
                 </tr>
               </thead>
               <tbody
