--- a/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget15/advance-tables-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/advance-tables/advance-tables-widget15/advance-tables-widget15.component.html
@@ -7,12 +7,12 @@
         <table class="table table-hover table-striped">
             <thead>
                 <tr>
-                    <th style="text-align: center;"> Sr No </th>
-                    <th style="text-align: center;"> Lubricant Name </th>
-                    <th style="text-align: center;"> Unit </th>
-                    <th style="text-align: center;"> HSN/SAC </th> 
-                    <th style="text-align: center;"> Created By </th> 
-                    <th style="text-align: center;"> Action </th>                               
+                    <th style="text-align: center;"><b> Sr No </b></th>
+                    <th style="text-align: center;"><b> Lubricant Name </b></th>
+                    <th style="text-align: center;"><b> Unit </b> </th>
+                    <th style="text-align: center;"><b> HSN/SAC </b></th> 
+                    <th style="text-align: center;"><b> Created By </b></th> 
+                    <th style="text-align: center;"><b> Action </b></th>                               
                 </tr>
             </thead>
             <tbody *ngFor="let data of lubricantList; let i = index;"> 
