--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
@@ -41,25 +41,25 @@
       <table id="excel-table2" class="table table-hover b">
         <thead class="table-light">
           <tr>
-            <th> Month </th>
-            <th> Product </th>
-            <th> Amount </th>
-            <th> Quantity </th>
-            <th> Sales Amount </th>
-            <th> Payment Amount </th>
-            <th> Balance </th>
+            <th style="text-align: center"><b> Month </b></th>
+            <th style="text-align: center"><b> Product </b></th>
+            <th style="text-align: center"><b> Amount </b></th>
+            <th style="text-align: center"><b> Quantity </b></th>
+            <th style="text-align: center"><b> Sales Amount </b></th>
+            <th style="text-align: center"><b> Payment Amount </b></th>
+            <th style="text-align: center"><b> Balance </b></th>
           </tr>
         </thead>
         <tbody *ngFor="let data of yearWiseQtyData">
           <tr>
-            <td> {{ data.month }} {{data.year}} </td>
+            <td style="text-align: center"> {{ data.month }} {{data.year}} </td>
             <td colspan="3">
           <tr *ngFor="let dataCr of data.crData">
-            <td class="p-0" [style.min-width]="'100px'">{{dataCr.product}}</td>
-            <td class="p-0" [style.min-width]="'100px'">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i
+            <td style="text-align: center" class="p-0" [style.min-width]="'100px'">{{dataCr.product}}</td>
+            <td style="text-align: center" class="p-0" [style.min-width]="'100px'">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i
                 class="fa-solid fa-indian-rupee-sign"></i>
               {{dataCr.purchase | number:'1.2-2'}}</td>
-            <td class="p-0" [style.min-width]="'100px'">
+            <td style="text-align: center" class="p-0" [style.min-width]="'100px'">
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               {{dataCr.quantity | number:'1.2-2'}}
               <span *ngIf="dataCr.product == 'CNG'">
@@ -71,13 +71,13 @@
             </td> <br>
           </tr>
           </td>
-          <td> <i class="fa-solid fa-indian-rupee-sign"></i>
+          <td style="text-align: center"> <i class="fa-solid fa-indian-rupee-sign"></i>
             {{ data.purchase | number:'1.2-2'}}
           </td>
-          <td> <i class="fa-solid fa-indian-rupee-sign"></i>
+          <td style="text-align: center"> <i class="fa-solid fa-indian-rupee-sign"></i>
             {{ data.payment | number:'1.2-2'}}
           </td>
-          <td> <i class="fa-solid fa-indian-rupee-sign"></i>
+          <td style="text-align: center"> <i class="fa-solid fa-indian-rupee-sign"></i>
             <span *ngIf="data.balance < 0 ">
               {{(data.balance)*(-1) | number:"1.2-2"}} CR
             </span>
