--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget9/charts-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget9/charts-widget9.component.html
@@ -28,11 +28,11 @@
       <table class="table table-centered table-nowrap">
         <thead>
           <tr>
-            <th>Sr. No.</th>
-            <th>Tank</th>
-            <th>Volume</th>
-            <th>Product</th>
-            <th>Action</th>
+            <th><b>Sr. No.</b></th>
+            <th><b>Tank</b></th>
+            <th><b>Volume</b></th>
+            <th><b>Product</b></th>
+            <th><b>Action</b></th>
           </tr>
         </thead>
         <tbody *ngFor="let charges of setTankData; let i = index;">
@@ -117,10 +117,10 @@
       <table class="table table-centered table-nowrap">
         <thead>
           <tr>
-            <th>Sr. No.</th>
-            <th>Tank</th>
-            <th>Volume</th>
-            <th>Product</th>
+            <th><b>Sr. No.</b></th>
+            <th><b>Tank</b></th>
+            <th><b>Volume</b></th>
+            <th><b>Product</b></th>
           </tr>
         </thead>
         <tbody *ngFor="let data of allTankDetails.data  ; let i = index">
