--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget4/feeds-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget4/feeds-widget4.component.html
@@ -39,11 +39,11 @@
         <table class="table table-hover">
           <thead class="table-light">
             <tr>
-              <th style="text-align: center;"> Sr No </th>
-              <th style="text-align: center;"> Report Date </th>
-              <th style="text-align: center;"> Created Date </th>
-              <th style="text-align: center;"> Report Amount</th>
-              <th style="text-align: center;"> Action </th>
+              <th style="text-align: center;"><b> Sr No </b></th>
+              <th style="text-align: center;"><b> Report Date </b></th>
+              <th style="text-align: center;"><b> Created Date </b></th>
+              <th style="text-align: center;"><b> Report Amount</b></th>
+              <th style="text-align: center;"><b> Action </b></th>
             </tr>
           </thead>
           <tbody *ngFor="let data of reportData; let i = index">
